cmake_minimum_required(VERSION 3.15)
project(my_war C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_lftprintf/includes)
include_directories(ft_lftprintf/includes/libft)
include_directories(includes)

add_executable(my_war
        ft_lftprintf/includes/libft/ft_atoi.c
        ft_lftprintf/includes/libft/ft_bzero.c
        ft_lftprintf/includes/libft/ft_char_in_string.c
        ft_lftprintf/includes/libft/ft_countwords.c
        ft_lftprintf/includes/libft/ft_cut_space.c
        ft_lftprintf/includes/libft/ft_cutstr.c
        ft_lftprintf/includes/libft/ft_get_integer.c
        ft_lftprintf/includes/libft/ft_isalnum.c
        ft_lftprintf/includes/libft/ft_isalpha.c
        ft_lftprintf/includes/libft/ft_isascii.c
        ft_lftprintf/includes/libft/ft_isdigit.c
        ft_lftprintf/includes/libft/ft_isprint.c
        ft_lftprintf/includes/libft/ft_isspace.c
        ft_lftprintf/includes/libft/ft_itoa.c
        ft_lftprintf/includes/libft/ft_itoa_long.c
        ft_lftprintf/includes/libft/ft_itoa_mod.c
        ft_lftprintf/includes/libft/ft_length.c
        ft_lftprintf/includes/libft/ft_lstadd.c
        ft_lftprintf/includes/libft/ft_lstdel.c
        ft_lftprintf/includes/libft/ft_lstdelone.c
        ft_lftprintf/includes/libft/ft_lstiter.c
        ft_lftprintf/includes/libft/ft_lstmap.c
        ft_lftprintf/includes/libft/ft_lstnew.c
        ft_lftprintf/includes/libft/ft_memalloc.c
        ft_lftprintf/includes/libft/ft_memccpy.c
        ft_lftprintf/includes/libft/ft_memchr.c
        ft_lftprintf/includes/libft/ft_memcmp.c
        ft_lftprintf/includes/libft/ft_memcpy.c
        ft_lftprintf/includes/libft/ft_memdel.c
        ft_lftprintf/includes/libft/ft_memmove.c
        ft_lftprintf/includes/libft/ft_memset.c
        ft_lftprintf/includes/libft/ft_new_integer_list.c
        ft_lftprintf/includes/libft/ft_numzero.c
        ft_lftprintf/includes/libft/ft_pow.c
        ft_lftprintf/includes/libft/ft_print_symbol.c
        ft_lftprintf/includes/libft/ft_putchar.c
        ft_lftprintf/includes/libft/ft_putchar_fd.c
        ft_lftprintf/includes/libft/ft_putchar_mod.c
        ft_lftprintf/includes/libft/ft_putendl.c
        ft_lftprintf/includes/libft/ft_putendl_fd.c
        ft_lftprintf/includes/libft/ft_putnbr.c
        ft_lftprintf/includes/libft/ft_putnbr_fd.c
        ft_lftprintf/includes/libft/ft_putnbr_mod.c
        ft_lftprintf/includes/libft/ft_putstr.c
        ft_lftprintf/includes/libft/ft_putstr_fd.c
        ft_lftprintf/includes/libft/ft_putstr_mod.c
        ft_lftprintf/includes/libft/ft_strcat.c
        ft_lftprintf/includes/libft/ft_strchr.c
        ft_lftprintf/includes/libft/ft_strclr.c
        ft_lftprintf/includes/libft/ft_strcmp.c
        ft_lftprintf/includes/libft/ft_strcpy.c
        ft_lftprintf/includes/libft/ft_strcpymap.c
        ft_lftprintf/includes/libft/ft_strdel.c
        ft_lftprintf/includes/libft/ft_strdup.c
        ft_lftprintf/includes/libft/ft_strequ.c
        ft_lftprintf/includes/libft/ft_striter.c
        ft_lftprintf/includes/libft/ft_striteri.c
        ft_lftprintf/includes/libft/ft_strjoin.c
        ft_lftprintf/includes/libft/ft_strlcat.c
        ft_lftprintf/includes/libft/ft_strlen.c
        ft_lftprintf/includes/libft/ft_strlen_mod.c
        ft_lftprintf/includes/libft/ft_strmap.c
        ft_lftprintf/includes/libft/ft_strmapi.c
        ft_lftprintf/includes/libft/ft_strncat.c
        ft_lftprintf/includes/libft/ft_strncmp.c
        ft_lftprintf/includes/libft/ft_strncpy.c
        ft_lftprintf/includes/libft/ft_strnequ.c
        ft_lftprintf/includes/libft/ft_strnew.c
        ft_lftprintf/includes/libft/ft_strnstr.c
        ft_lftprintf/includes/libft/ft_strrchr.c
        ft_lftprintf/includes/libft/ft_strsplit.c
        ft_lftprintf/includes/libft/ft_strstr.c
        ft_lftprintf/includes/libft/ft_strsub.c
        ft_lftprintf/includes/libft/ft_strtrim.c
        ft_lftprintf/includes/libft/ft_thebigest_word.c
        ft_lftprintf/includes/libft/ft_tolower.c
        ft_lftprintf/includes/libft/ft_toupper.c
        ft_lftprintf/includes/libft/libft.h
        ft_lftprintf/includes/printf.h
        ft_lftprintf/srcs/base_n_p.c
        ft_lftprintf/srcs/bonus_color.c
        ft_lftprintf/srcs/bonus_fd.c
        ft_lftprintf/srcs/bonus_smile.c
        ft_lftprintf/srcs/color_option.c
        ft_lftprintf/srcs/format_checker.c
        ft_lftprintf/srcs/ft_printf.c
        ft_lftprintf/srcs/print_some_wight_aruc.c
        ft_lftprintf/srcs/work_with_errors.c
        ft_lftprintf/srcs/work_with_flags.c
        ft_lftprintf/srcs/work_with_floats.c
        ft_lftprintf/srcs/work_with_form_x.c
        ft_lftprintf/srcs/work_with_format_char_str.c
        ft_lftprintf/srcs/work_with_int.c
        ft_lftprintf/srcs/work_with_o.c
        ft_lftprintf/srcs/work_with_p.c
        ft_lftprintf/srcs/work_with_u.c
        ft_lftprintf/srcs/work_with_uxo_part_one.c
        ft_lftprintf/srcs/work_with_uxo_part_two.c
        ft_lftprintf/srcs/work_with_x_big.c
        includes/corewar.h
        includes/op.h
        srcs/corewar/check_input.c
        srcs/corewar/corewar.c)
